fix: correct GitHub Actions workflow environment variable passing

--- a/.github/workflows/deploy-backend-railway.yml
+++ b/.github/workflows/deploy-backend-railway.yml
@@ -20,11 +20,7 @@ jobs:
         run: npm install -g @railway/cli
 
       - name: Deploy to Railway
-        run: |
-          railway deploy \
-            --force \
-            --service backend \
-            --environment production
+        run: railway deploy --force
         env:
           RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
 
