--- a/.github/workflows/deploy-frontend-vercel.yml
+++ b/.github/workflows/deploy-frontend-vercel.yml
@@ -25,12 +25,9 @@ jobs:
         run: npm install -g vercel@latest
 
       - name: Deploy to Vercel
-        run: |
-          vercel deploy \
-            --token ${{ secrets.VERCEL_TOKEN }} \
-            --prod \
-            --yes
+        run: vercel deploy --prod --yes
         env:
+          VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
           VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
 
