--- a/railway.toml
+++ b/railway.toml
@@ -3,7 +3,7 @@ builder = "dockerfile"
 dockerfilePath = "backend/Dockerfile.railway"
 
 [deploy]
-startCommand = "uvicorn moodlelogsmart.api.main:app --host 0.0.0.0 --port $PORT"
+startCommand = "export PYTHONPATH=/app/src && uvicorn moodlelogsmart.api.main:app --host 0.0.0.0 --port $PORT"
 healthcheckPath = "/api/health"
 healthcheckTimeout = 100
 restartPolicyType = "on_failure"
