fix: correct uvicorn module path from moodlelogsmart.api.main to moodlelogsmart.main

--- a/backend/Dockerfile.railway
+++ b/backend/Dockerfile.railway
@@ -27,4 +27,4 @@ EXPOSE 8000
 
 # Set Python path and start command
 ENV PYTHONPATH=/app/src
-CMD uvicorn moodlelogsmart.api.main:app --host 0.0.0.0 --port ${PORT:-8000}
+CMD uvicorn moodlelogsmart.main:app --host 0.0.0.0 --port ${PORT:-8000}
