--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -53,4 +53,4 @@ HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
 EXPOSE 8000
 
 # Run FastAPI app
-CMD ["uvicorn", "moodlelogsmart.api.main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uvicorn", "moodlelogsmart.main:app", "--host", "0.0.0.0", "--port", "8000"]
