feat: add X-API-Key header to all API calls for authentication

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -5,3 +5,7 @@
 # For local development: http://localhost:8000
 # For production: https://your-backend-domain.com
 VITE_API_URL=http://localhost:8000
+
+# API Key - Must match one of the keys in backend's API_KEYS
+# Generate with: python -c "import secrets; print(secrets.token_urlsafe(32))"
+VITE_API_KEY=your-api-key-here
